fixed favicon link

--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -9,7 +9,7 @@
     <meta name="keywords" content="turtle graphics, programming, coding, education, learn to code">
     <meta name="description" content="The Turtle System is a free educational program developed at the University of Oxford, designed to support the new Computer Science component of the National Curriculum.">
     <meta name="theme-color" content="#a86765">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Error</title>
     {{ encore_entry_link_tags('app') }}
   </head>
