--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <meta name="keywords" content="turtle graphics, programming, coding, education, learn to code">
     <meta name="description" content="The Turtle System is a free educational program developed at the University of Oxford, designed to support the new Computer Science component of the National Curriculum.">
     <meta name="theme-color" content="{% block themeColour %}{% endblock %}">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>{% block title %}{% endblock %}</title>
     {{ encore_entry_link_tags('app') }}
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-54853004-1', 'auto');ga('send', 'pageview');</script>
