--- a/templates/system/csac.html.twig
+++ b/templates/system/csac.html.twig
@@ -99,7 +99,7 @@
       <b>9. Games and Computer Science</b>
       <ol class="list">
         <li><a href="{{ path('online_home') }}?x=KnightsTour">9.1 Knight's tour</a></li>
-        <li><a href="{{ path('online_home') }}?x=Nim">9.2 Nim</a></li>
+        <li><a href="{{ path('online_home') }}?x=MultiNim">9.2 Nim with multiple piles</a></li>
         <li><a href="{{ path('online_home') }}?x=NoughtsAndCrosses">9.3 Noughts and Crosses</a></li>
       </ol>
     </li>
