trying macos download

--- a/templates/system/home.html.twig
+++ b/templates/system/home.html.twig
@@ -10,7 +10,7 @@
   <p style="text-align:center;"><a href="{{ path('turtle_tsd', { version: '12' }) }}" class="button blue-button" style="padding: 1em;">Download the Turtle System v12<br><span class="windows-icon"></span> Windows Only</a></p>
   <p>Click on the button above to download version 12 of the <i>Turtle System</i> (beta). Note that this version is still under development. Already however it has several additional features, most notably support for multi-dimensional arrays.</p>
   {# --- download new systems (coming soon...)
-  <p>We are actively developing two versions of the <i>Turtle System</i>: the <i>Delphi Turtle System</i> (or <i>Turtle System D</i>), written in Delphi Pascal, and the <i>Electron Turtle System</i> (or <i>Turtle System E</i>), written in JavaScript and Electron. The former is faster and has more features, but is currently only available for Windows. The latter is available on all platforms, and can also be run in a web browser (see <a href="{{ path('online_home') }}">www.turtle.ox.ac.uk/online</a>).</p>
+  <p>We are actively developing two versions of the <i>Turtle System</i>: the <i>Delphi Turtle System</i> (or <i>Turtle System D</i>), written in Delphi Pascal, and the <i>Electron Turtle System</i> (or <i>Turtle System E</i>), written in JavaScript and Electron. The former is faster and has more features, but is currently only available for Windows. The latter is available on Windows and Mac, and can also be run in a web browser (see <a href="{{ path('online_home') }}">www.turtle.ox.ac.uk/online</a>).</p>
   <table class="downloads">
     <thead>
       <tr>
@@ -32,7 +32,6 @@
         <td><a href="{{ path('turtle_tsd', { 'version': '13' }) }}" class="button"><span class="icon windows-icon"></span> Windows</a></td>
         <td>
           <a href="{{ path('turtle_tse', { 'platform': 'macos' }) }}" class="button"><span class="icon apple-icon"></span>Apple</a>
-          <a href="{{ path('turtle_tse', { 'platform': 'linux' }) }}" class="button"><span class="icon linux-icon"></span> Linux</a>
           <a href="{{ path('turtle_tse', { 'platform': 'win' }) }}" class="button"><span class="icon windows-icon"></span> Windows</a>
         </td>
       </tr>
