--- a/assets/css/_tabs.scss
+++ b/assets/css/_tabs.scss
@@ -7,6 +7,7 @@
     padding: 0.5em 1em;
     border: 1px solid transparent;
     margin-bottom: -1px;
+    white-space: nowrap;
     &:not(:last-child) {
       margin-right: 2px;
     }
