--- a/templates/_includes/modals/privacy_policy.html.twig
+++ b/templates/_includes/modals/privacy_policy.html.twig
@@ -4,13 +4,13 @@
       <h5>Privacy Policy</h5>
     </div>
     <div class="modal-body content">
-      <p>This web site collects some basic personal data when you register (name and email address). It also collects general usage data. These data are stored on a web server in the Computer Science Department at the University of Oxford, and will be retained until you delete your account (you can delete your account at any time). We will process the data in a proper manner, and take appropriate security measures to prevent unauthorized access to it, and any disclosure, modification, or destruction of it.</p>
-      <p>These data will be used solely for the following purposes:</p>
+      <p>This web site collects your name and email address when you register. It also collects general usage data. These data are stored on a web server in the Computer Science Department at the University of Oxford, and will be retained until you delete your account (you can delete your account at any time). We will process the data in a proper manner, and take appropriate security measures to prevent unauthorized access to it, and any disclosure, modification, or destruction of it.</p>
+      <p>We will never share these data with any third parties. They will be used solely for the following purposes:</p>
       <ul class="bullet list">
         <li>Automatically authenticating user login requests.</li>
-        <li>Performing additional automated security tests in the event that a user forgets his or her login credentials.</li>
+        <li>Performing additional automated security tests in the event that you forget your login credentials.</li>
         <li>Automatically monitoring the usage of the site, in order to improve the quality of the service.</li>
-        <li>Manually looking up contact details for teachers, with a view to contacting them for mutual benefit (discussing how this service might be improved, offering training sessions, school vists, etc.).</li>
+        <li>Manually looking up contact details, so that we might contact you for mutual benefit (discussing how this service might be improved, offering training sessions, school visits, etc.).</li>
       </ul>
       <p>By signing up to this site, you agree that we may use your data in these ways. If this policy changes in the future, we will email you informing you of the changes, at which point you may choose to delete your account; not doing so will be taken as consenting to the changes.</p>
       <div style="text-align:right;">
